@@ -817,7 +817,18 @@
     number of the door to create (related to the <em>Doors</em> command) - if 
     the elevator only has one door, or if the <em>Doors</em> command was not used, 
     specify 1 here.</p>
-  <p align="left"><strong>19. Cut</strong> - performs a manual box cut on an area 
+  <p align="left"><strong>19. AddFloorIndicator</strong> - creates a floor indicator 
+    associated with a specific elevator<br>
+    Syntax: <font size="2" face="Courier New, Courier, mono">AddFloorIndicator<em> 
+    elevator, direction</em>, <em>CenterX, CenterZ, width, height, voffset</em></font> 
+  </p>
+  <p align="left">The AddFloorIndicator command creates a floor indicator at the 
+    position specified by <em>CenterX</em> and <em>CenterZ</em>, associated with 
+    the elevator specified by <em>elevator</em>. <em>Direction</em> is the direction 
+    the indicator faces, and can be either &quot;left&quot;, &quot;right&quot;, 
+    &quot;front&quot; or &quot;back&quot;. This command can be given multiple 
+    times to create multiple indicators.</p>
+  <p align="left"><strong>20. Cut</strong> - performs a manual box cut on an area 
     within the current floor<br>
     Syntax: <font size="2" face="Courier New, Courier, mono">Cut x1, y1, z1, x2, 
     y2, z2, cutwalls, cutfloors<br>
@@ -1042,9 +1053,10 @@
     Syntax: <font size="2" face="Courier New, Courier, mono">AddFloorIndicator<em> 
     direction</em>, <em>CenterX, CenterZ, width, height, voffset</em></font> </p>
   <p align="left">The AddFloorIndicator command creates a floor indicator at the 
-    position (relative to the elevator) specified by CenterX and CenterZ. Direction 
-    is the direction the indicator faces, and can be either &quot;left&quot;, 
-    &quot;right&quot;, &quot;front&quot; or &quot;back&quot;.</p>
+    position (relative to the elevator) specified by <em>CenterX</em> and <em>CenterZ</em>. 
+    <em>Direction</em> is the direction the indicator faces, and can be either 
+    &quot;left&quot;, &quot;right&quot;, &quot;front&quot; or &quot;back&quot;. 
+    This command can be given multiple times to create multiple indicators.</p>
   <p align="left"><strong>10. AddDirectionalIndicators</strong> - creates the 
     elevator's directional indicator/lanterns (similar to the CreateCallButtons 
     command) <br>
